# life_manager

./: .gitignore  LICENSE  README.md  data.db  main.py  pyproject.toml
database/: data.db  task_db_manager.py  tasks_gui.py
main_gui/: main_gui.py
shop/: shop.json  shop_gui.py  shop_manager.py
src/main_gui/: main_gui.py
src/shop/: shop.json  shop_gui.py  shop_manager.py
src/tasks/: data.db  task_db_manager.py  tasks_completed.json  tasks_gui.py
tasks/: data.db  task_db_manager.py  tasks_completed.json  tasks_gui.py
